<resources>
    <string name="app_name">Budget Planner</string>
    <!-- Registration -->
    <string name="name_validation_error">First / Last name should contain only alpha characters</string>
    <string name="name_length_error">First / Last name must be greater than 3 or equal to 22</string>
    <string name="password_validation_error">Please enter a valid password</string>
    <string name="email_validation_error">Please enter a valid email address</string>
    <string name="conflict_error">The request could not be processed because of conflict in the request.</string>
    <string name="bad_request_error">The server cannot or will not process the request due to some problems.</string>
    <string name="no_content_error">There is no content to send in the response body.</string>
    <string name="validation_error">Entered credentials are invalid!</string>
    <!--Welcome-->
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message">Your account has been successfully registered and you can now proceed to sign in.</string>
    <string name="welcome_button_text">PROCEED TO SIGN IN</string>
    <!--SignIn-->
    <string name="access_your_account">Access your \n account</string>
    <string name="sign_up">sign up</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_in">SIGN IN</string>
    <string name="cards">Cards</string>
    <string name="invalid_password_email_error">Incorrect username or password</string>
    <string name="unknown_error">Unknown error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please wait…</string>
    <string name="your_request_is_being_processed">Your request is being processed.</string>
    <string name="authentication_failed">Authentication Failed!</string>
    <string name="the_request_has_timed_out">The request has timed out.</string>
    <string name="got_it">Got It!</string>
    <string name="txt_title_sing_up">Let\'s get you \n started</string>
    <string name="btn_register_next">NEXT</string>
    <string name="btn_register_sign_up">SIGN UP</string>
    <string name="btn_register_sign_up_main">CONTINUE</string>
    <string name="edt_register_name">First Name</string>
    <string name="edt_register_sur_name">Last Name</string>
    <string name="txt_register_step_1">Step 1 of 2</string>
    <string name="txt_register_step_2">Step 2 of 2</string>
    <string name="txt_initial_balance">Initial Balance</string>
    <string name="txt_initial_balance2">$0.<small><small>00</small></small></string>
    <string name="edt_register_email">Enter your email</string>
    <string name="edt_register_pass">Enter your password</string>
    <string name="edt_register_pass_confirm">Confirm password</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_title_register">Create your \n account</string>
    <string name="password_not_matching">Passwords are not matching.</string>
    <string name="number_length_error">Initial balance must be smaller or equal to 5 digits</string>
    <string name="number_validation_error">Invalid initial balance</string>
    <string name="error">An error occurred</string>
    <string name="lost_internet_connection">No internet connection</string>
    <string name="undefined">Undefined</string>
    <string name="lost_internet_connection_mes">Turn on your Internet and retry.</string>
    <string name="retry">Retry</string>
</resources>