<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.ui.views.RegisterDataFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_ellipse_8"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/img_ellipse_9" />

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_register_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_title"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/edt_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_register_sur_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_title"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        style="@style/TitleStyle"
        android:id="@+id/sign_up_title"
        android:text="@string/txt_title_sing_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/ButtonStyle"
        android:enabled="false"
        android:text="@string/btn_register_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/txt_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_500"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"
        android:text="@string/txt_register_step_1"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>