<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".authentication.ui.views.RegisterFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/img_ellipse_8" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20"
        app:srcCompat="@drawable/img_ellipse_9" />

    <TextView
        style="@style/TitleStyle"
        android:id="@+id/sign_up_title"
        android:text="@string/txt_title_sing_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        style="@style/ButtonStyle"
        android:layout_marginStart="@dimen/large_150"
        android:layout_marginEnd="@dimen/large_150"
        android:enabled="false"
        android:text="@string/btn_register_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/txt_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_500"
        android:text="@string/txt_register_step_2"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_150"
        android:layout_marginEnd="@dimen/large_150"
        app:boxBackgroundColor="@color/menu_roles"
        app:boxStrokeColor="@color/menu_roles"
        android:hint="@string/app_name"
        app:hintTextColor="@color/gray"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30">

        <AutoCompleteTextView
            android:id="@+id/industry"
            android:textColor="@color/white"
            android:paddingBottom="@dimen/small_50"
            android:paddingTop="@dimen/small_50"
            android:popupBackground="@color/menu_roles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xlarge_100"
        android:textSize="@dimen/font_16"
        android:text="@string/txt_initial_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <EditText
        android:id="@+id/edt_initial_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_100"
        android:ems="@integer/default_ems"
        android:hint="@string/txt_initial_balance2"
        android:inputType="number"
        android:maxLines="@integer/max_lines"
        android:text="@string/txt_initial_balance2"
        android:textSize="@dimen/font_27"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_balance"
        app:layout_constraintTop_toBottomOf="@+id/txt_balance" />

</androidx.constraintlayout.widget.ConstraintLayout>